split models.config.py into multiple files, finish datamodel_conversion, make scenario_rule polymorphic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
-        "source.fixAll.eslint": true
+        "source.fixAll.eslint": true,
+        "source.organizeImports": true
+
     },
     "editor.quickSuggestions": {
         "strings": true
