--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,7 @@
 FROM nginx:alpine
 
 COPY ./files/config/nginx.conf.template /etc/nginx/templates/default.conf.template
+COPY ./files/config/nginx.conf /etc/nginx/nginx.conf
 
 WORKDIR /app
 
