--- a/src/Dockerfile.prod
+++ b/src/Dockerfile.prod
@@ -21,7 +21,7 @@ ENV PYTHONUNBUFFERED 1
 # Install server packages
 RUN apk update \
     && apk add postgresql-dev make automake gcc g++ subversion python3-dev musl-dev libffi-dev openssl-dev \
-    && apk add jpeg-dev libwebp-dev zlib-dev freetype-dev lcms2-dev openjpeg-dev tiff-dev tk-dev tcl-dev libxml2-dev libxslt-dev libxml2 git
+    && apk add jpeg-dev libwebp-dev zlib-dev freetype-dev lcms2-dev openjpeg-dev tiff-dev tk-dev tcl-dev libxml2-dev libxslt-dev libxml2 git openssh
 
 # Install ImageMagick
 RUN apk add --no-cache imagemagick && \
@@ -39,11 +39,18 @@ COPY docker-entrypoint.prod.sh $APP_HOME
 # Copy project
 COPY . $APP_HOME
 
+# Copy ssh files
+COPY sshd_config /etc/ssh/
+
 # Chown all files
 RUN chown -R app:app $APP_HOME
+RUN chmod -R +x $APP_HOME
 
-# Change user to app
-USER app
+# Start and enable SSH
+RUN echo "root:Docker!" | chpasswd \
+    && chmod +x ./docker-entrypoint.prod.sh \
+    && cd /etc/ssh/ \
+    && ssh-keygen -A
 
 # Run entrypoint.prod.sh
 ENTRYPOINT ["sh", "docker-entrypoint.prod.sh", "gunicorn"]
