Add scenariocontext to challengemode

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@/context/*": ["./context/*"],
       "@/components/*": ["./components/*"],
       "@/containers/*": ["./containers/*"],
       "@/pages/*": ["./pages/*"],
