--- a/docker/files/config/nginx.conf.template
+++ b/docker/files/config/nginx.conf.template
@@ -1,7 +1,11 @@
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
-    proxy_read_timeout 120s;
+    proxy_connect_timeout       120s; # time to open a connection to the proxy before we give up
+    proxy_send_timeout          120s; # timeout for transmitting a request to the proxied server
+    proxy_read_timeout          120s; # timeout for reading a response from the proxied server - did it send back anything before this has expired
+    send_timeout                120s; # timeout for sending a response to the requesting client - note this isn't proxy_send_timeout, but the time between two successive write operations to the requesting client (ie. browser)
+    reset_timedout_connection on;
 
     server_name holontool.nl _;
 
