--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,5 @@
-WAGTAIL_API_URL=http://localhost:8000/wt/api/nextjs
+## URL to communicate from the Node.js backend to Wagtail.
+WAGTAIL_API_URL=http://python:8000/wt/api/nextjs
+## URL to communicate from the web browser to Wagtail
 NEXT_PUBLIC_WAGTAIL_API_URL=http://localhost:8000/wt/api/nextjs
 NEXT_PUBLIC_BASE_URL=http://localhost:8000/wt
