--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,4 +1,5 @@
-FROM postgres:12 as db
+# Same version as on Azure
+FROM postgres:13.9 as db
 WORKDIR /app
 COPY init.sh /docker-entrypoint-initdb.d
 COPY prod.sql /scripts/db/dump.sql
