--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.1"
 services:
   web:
-    image: nginx:alpine
+    image: nginx:1.25.0-alpine3.17
     working_dir: /app
     ports:
       - "80:80"
