--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM nginx:alpine
+FROM nginx:1.25.0-alpine3.17
 
 COPY ./files/config/nginx.conf.template /etc/nginx/templates/default.conf.template
 COPY ./files/config/nginx.conf /etc/nginx/nginx.conf
