--- a/docker/files/config/nginx.conf.template
+++ b/docker/files/config/nginx.conf.template
@@ -7,7 +7,7 @@ server {
     send_timeout                120s; # timeout for sending a response to the requesting client - note this isn't proxy_send_timeout, but the time between two successive write operations to the requesting client (ie. browser)
     reset_timedout_connection on;
 
-    server_name pizzaoven.holontool.nl _;
+    server_name ${SERVER_NAME} _;
 
     client_max_body_size 128M;
 
@@ -32,16 +32,6 @@ server {
     location /wt/media  {
         alias /app/media;
     }
-
-    # If you instead want to use images from a remote domain - uncomment this
-    # location /wt/media {
-    #     try_files $uri @fallback;
-    # }
-    #
-    # location @fallback {
-    #     resolver 1.1.1.1;
-    #     rewrite "^/wt/media/(.*)$" "https://${MEDIA_REMOTE_DOMAIN}/wt/media/$1" redirect;
-    # }
 
     location /wt/static/ {
         expires 30d;
