--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,6 +48,8 @@ services:
 
   db:
     image: prod_db
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
     build:
       context: ./db
     ports:
@@ -58,5 +60,4 @@ services:
       - POSTGRES_DB=postgres
 
 volumes:
-  src:
-    name: pythonvol
+    postgres-data:
