--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,3 +54,6 @@ services:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
       - POSTGRES_DB=postgres
+
+volumes:
+  postgres-data:
