--- a/docker/files/config/nginx.pizza.conf
+++ b/docker/files/config/nginx.pizza.conf
@@ -14,6 +14,9 @@ server {
     send_timeout                120s; # timeout for sending a response to the requesting client - note this isn't proxy_send_timeout, but the time between two successive write operations to the requesting client (ie. browser)
     reset_timedout_connection on;
 
+    proxy_buffer_size 16M;
+
+
     server_name ${SERVER_NAME} _;
 
     client_max_body_size 128M;
