increase other proxy buffer settings

--- a/docker/files/config/nginx.pizza.conf
+++ b/docker/files/config/nginx.pizza.conf
@@ -15,6 +15,8 @@ server {
     reset_timedout_connection on;
 
     proxy_buffer_size 16M;
+    proxy_busy_buffers_size 16M;
+    proxy_buffers 16 16M;
 
 
     server_name ${SERVER_NAME} _;
