Enable sentry monitoring
Sentry is a monitoring platform which does tracing to give insight
into the application. It is accessible through
https://zenmo.sentry.io/projects/holon/ . DM me for an account.

You can distinguish your local enviroment in Sentry by defining the
environment variable SENTRY_ENVIRONMENT for Python. For example set
SENTRY_ENVIRONMENT=erik.

You can start submitting traces by defining the environment variable
SENTRY_DSN. For example set SENTRY_DSN=https://764e9f2b886741bcbcfd2acd74a7f7b0@o4505045746384896.ingest.sentry.io/4505045759361024

I am not familiar with Django configuration so any feedback on that
part is most welcome.

--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -19,6 +19,10 @@ DB_PASSWORD=postgres
 DB_HOST=db
 DB_PORT=5432
 
+## uncomment DSN to opt-in to Sentry
+# SENTRY_DSN=https://764e9f2b886741bcbcfd2acd74a7f7b0@o4505045746384896.ingest.sentry.io/4505045759361024
+SENTRY_ENVIRONMENT=devcontainer
+
 #FRONTEND
 
 NEXT_PUBLIC_WAGTAIL_API_URL=http://localhost:8000/wt/api/nextjs
