--- a/docker/config/python.pizza.env
+++ b/docker/config/python.pizza.env
@@ -14,3 +14,4 @@ CUSTOM_STATIC_LOCATION="static-acceptatie"
 CUSTOM_MEDIA_LOCATION="media-acceptatie"
 SECRET_KEY=
 AZURE_STORAGE_KEY=
+SENTRY_ENVIRONMENT=pizzaoven
