add RETURN_SCENARIO env variables

--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -8,6 +8,7 @@ ALLOWED_HOSTS=localhost
 
 #Anylogic
 AL_API_KEY=al_api_key
+RETURN_SCENARIO=True # setting that is used in the HOLON view to determine whether to send back the used scenario (through the serializer) or not
 
 #DATABASE
 DATABASE=postgres
