--- a/docker/files/config/nginx.conf.template
+++ b/docker/files/config/nginx.conf.template
@@ -69,6 +69,8 @@ server {
         proxy_set_header Host $host:8000;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "";
         proxy_pass ${PYTHON_HOST}:8000/wt;
     }
 }
