docker: add clean-scenarios container
Azure can't use the current webserver container to run scenario cleanup,
because overriding the entrypoint is not supported.

Implemented solution is to build a leaner container jus to run the
command. It uses the same base image as the Python webserver using
docker multistage builds.

Test using
`docker build --file ./src/prod.Dockerfile --target clean-scenarios --tag clean-scenarios ./src`
and
`docker run clean-scenarios`

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
   next:
     build:
       context: ./frontend
-      dockerfile: Dockerfile.prod
+      dockerfile: prod.Dockerfile
     ports:
       - "3000:3000"
     depends_on:
@@ -36,7 +36,7 @@ services:
   python:
     build:
       context: ./src
-      dockerfile: Dockerfile.prod
+      dockerfile: prod.Dockerfile
     volumes:
       - "./src:/app"
     depends_on:
