--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 3000",
     "build": "next build",
     "build:local": "IGNORE_SENTRY=1 next build",
-    "start": "next start -p 3000",
+    "start": "node --require ./load-appinsights.js node_modules/next/dist/bin/next start -p $PORT",
     "export": "next export",
     "storybook": "start-storybook -p 3001 -s ./public",
     "build-storybook": "npx build-storybook -s public",
@@ -20,7 +20,10 @@
   "dependencies": {
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
+    "@microsoft/applicationinsights-react-js": "^3.4.2",
+    "@microsoft/applicationinsights-web": "^3.0.2",
     "@types/react": "^18.0.15",
+    "applicationinsights": "^2.7.0",
     "classnames": "^2.3.1",
     "es-cookie": "^1.4.0",
     "i18next": "^21.8.5",
