--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
                 "--nothreading"
             ],
             "django": true,
-            "justMyCode": false
+            "justMyCode": true
         }
     ]
 }
