--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -27,7 +27,7 @@ services:
     # Use "forwardPorts" in **devcontainer.json** to forward an app port locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
   db:
-    image: postgres:latest
+    image: postgres:13.9
     restart: unless-stopped
     volumes:
       - postgres-data:/var/lib/postgresql/data
