--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
+    "@microsoft/applicationinsights-react-js": "^3.4.3",
+    "@microsoft/applicationinsights-web": "^3.0.2",
     "@types/react": "^18.0.15",
     "classnames": "^2.3.1",
     "es-cookie": "^1.4.0",
