--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,19 +20,19 @@
   "dependencies": {
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
-    "@microsoft/applicationinsights-react-js": "^3.4.3",
+    "@microsoft/applicationinsights-react-js": "^17.0.0",
     "@microsoft/applicationinsights-web": "^3.0.2",
     "@types/react": "^18.0.15",
     "classnames": "^2.3.1",
     "es-cookie": "^1.4.0",
     "i18next": "^21.8.5",
     "lodash": "^4.17.21",
-    "next": "12.3.0",
+    "next": "^13.4.12",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-confetti": "^6.1.0",
     "react-cookie-consent": "^8.0.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
     "react-player": "^2.11.0",
     "recharts": "^2.4.3",
@@ -61,7 +61,7 @@
     }
   },
   "devDependencies": {
-    "@babel/core": "^7.17.10",
+    "@babel/core": "^7.22.11",
     "@storybook/addon-a11y": "^6.4.22",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-viewport": "^6.4.22",
@@ -70,37 +70,37 @@
     "@storybook/manager-webpack5": "^6.4.22",
     "@storybook/react": "^6.4.22",
     "@svgr/webpack": "^6.2.1",
-    "@swc/core": "^1.2.196",
-    "@swc/jest": "^0.2.21",
+    "@swc/core": "^1.3.80",
+    "@swc/jest": "^0.2.29",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.7",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.2.0",
-    "@types/jest": "^29.2.0",
+    "@testing-library/jest-dom": "^6.1.2",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.4",
     "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "autoprefixer": "^10.4.7",
-    "babel-loader": "^8.2.5",
+    "autoprefixer": "^10.4.15",
+    "babel-loader": "^8.3.0",
     "babel-plugin-transform-dynamic-import": "^2.1.0",
     "commander": "^9.4.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.2.0",
+    "eslint-config-next": "^13.4.19",
     "husky": "^8.0.1",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^29.0.0",
-    "jest-environment-jsdom": "^29.2.2",
+    "jest": "^29.6.4",
+    "jest-environment-jsdom": "^29.6.4",
     "jest-fetch-mock": "^3.0.3",
-    "jest-junit": "^13.2.0",
+    "jest-junit": "^16.0.0",
     "jest-next-dynamic": "^1.0.1",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
-    "storybook-addon-next": "^1.6.9",
-    "style-loader": "^3.3.1",
+    "storybook-addon-next": "^1.8.0",
+    "style-loader": "^3.3.3",
     "tailwindcss": "^3.1.8",
-    "ts-jest": "^29.0.3",
+    "ts-jest": "^29.1.1",
     "tsconfig-paths-webpack-plugin": "^4.0.0"
   }
 }
