Add Next.js request logging

--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -26,6 +26,7 @@ SENTRY_ENVIRONMENT=devcontainer
 
 #FRONTEND
 
+NEXT_PUBLIC_BASE_URL=http://localhost:8000/wt/api/nextjs
 NEXT_PUBLIC_WAGTAIL_API_URL=http://localhost:8000/wt/api/nextjs
 
 AWS_ACCESS_KEY_ID=
