--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       context: ..
       dockerfile: .devcontainer/Dockerfile
       args:
+        NEXT_PUBLIC_WAGTAIL_API_URL: http://localhost:8000/wt/api/nextjs
         # Update 'VARIANT' to pick a version of Python: 3, 3.10, 3.9, 3.8, 3.7, 3.6
         # Append -bullseye or -buster to pin to an OS version.
         # Use -bullseye variants on local arm64/Apple Silicon.
