Azure blob storage for test
Make the test environment more like prod and acceptance by using azure
blob storage.

Also
- disentangle prod and acceptance blob storage
- remove unused configurations

--- a/docker/config/python.example.env
+++ b/docker/config/python.example.env
@@ -7,4 +7,8 @@ DB_NAME=postgres
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_HOST=db
-SENTRY_ENVIRONMENT=
+SENTRY_ENVIRONMENT=development
+SECRET_KEY=asdfasdf
+ALLOWED_HOSTS=*
+DOMAIN_HOST="https://pizzaoven.holontool.nl"
+
