--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -108,6 +108,8 @@ jobs:
             ALLOWED_HOSTS="*"
             AZURE_ACCOUNT_NAME=holonstorage
             AZURE_STORAGE_KEY=${{ secrets.AZURE_STORAGE_KEY }}
+            MEDIA_LOCATION=${{ fromJson(needs.variables.outputs.result).MEDIA_LOCATION }}
+            STATIC_LOCATION=${{ fromJson(needs.variables.outputs.result).STATIC_LOCATION }}
             DB_HOST=${{ secrets.DB_HOST }}
             DB_USER=${{ secrets.DB_USER }}
             DB_NAME=${{ fromJson(needs.variables.outputs.result).DB_NAME }}
