--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
     build:
       context: ./frontend
       dockerfile: prod.Dockerfile
+      args:
+        NEXT_PUBLIC_WAGTAIL_API_URL: http://localhost:8000/wt/api/nextjs
     ports:
       - "3000:3000"
     environment:
@@ -61,8 +63,6 @@ services:
     image: postgres:13.9
     volumes:
       - postgres-data:/var/lib/postgresql/data
-    build:
-      context: ./db
     ports:
       - "8083:5432"
     environment:
