--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -28,6 +28,7 @@ SENTRY_ENVIRONMENT=devcontainer
 
 NEXT_PUBLIC_BASE_URL=http://localhost:8000/wt/api/nextjs
 NEXT_PUBLIC_WAGTAIL_API_URL=http://localhost:8000/wt/api/nextjs
+WAGTAIL_API_URL=http://localhost:8000/wt/api/nextjs
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
