--- a/src/holon/fixtures/archive/scenario-config-fixture.json
+++ b/src/holon/fixtures/archive/scenario-config-fixture.json
@@ -54,7 +54,7 @@
             "scenario": 1,
             "module": "upscaling",
             "name": "National upscaling",
-            "api_url": "https://beta-engine.energytransitionmodel.com/api/v3/scenarios/",
+            "api_url": "https://engine.energytransitionmodel.com/api/v3/scenarios/",
             "etm_scenario_id": 2203642
         }
     },
@@ -65,7 +65,7 @@
             "scenario": 1,
             "module": "cost",
             "name": "Cost module",
-            "api_url": "https://beta-engine.energytransitionmodel.com/api/v3/scenarios/",
+            "api_url": "https://engine.energytransitionmodel.com/api/v3/scenarios/",
             "etm_scenario_id": 2175158
         }
     },
@@ -76,7 +76,7 @@
             "scenario": 1,
             "module": "upscaling",
             "name": "Regional upscaling",
-            "api_url": "https://beta-engine.energytransitionmodel.com/api/v3/scenarios/",
+            "api_url": "https://engine.energytransitionmodel.com/api/v3/scenarios/",
             "etm_scenario_id": 2203666
         }
     },
@@ -87,7 +87,7 @@
             "scenario": 1,
             "module": "costbenefit",
             "name": "",
-            "api_url": "https://beta-engine.energytransitionmodel.com/api/v3/scenarios/",
+            "api_url": "https://engine.energytransitionmodel.com/api/v3/scenarios/",
             "etm_scenario_id": 987511684
         }
     },
