--- a/src/holon/fixtures/gillis/ref/bedrijventerrein-POSTCONFIG.json
+++ b/src/holon/fixtures/gillis/ref/bedrijventerrein-POSTCONFIG.json
@@ -2295,7 +2295,7 @@
             "scenario": 1,
             "module": "upscaling",
             "name": "National upscaling",
-            "api_url": "https://beta-engine.energytransitionmodel.com/api/v3/scenarios/",
+            "api_url": "https://engine.energytransitionmodel.com/api/v3/scenarios/",
             "etm_scenario_id": 2203642
         }
     },
@@ -2306,7 +2306,7 @@
             "scenario": 1,
             "module": "cost",
             "name": "Cost module",
-            "api_url": "https://beta-engine.energytransitionmodel.com/api/v3/scenarios/",
+            "api_url": "https://engine.energytransitionmodel.com/api/v3/scenarios/",
             "etm_scenario_id": 2175158
         }
     },
@@ -2317,7 +2317,7 @@
             "scenario": 1,
             "module": "upscaling",
             "name": "Regional upscaling",
-            "api_url": "https://beta-engine.energytransitionmodel.com/api/v3/scenarios/",
+            "api_url": "https://engine.energytransitionmodel.com/api/v3/scenarios/",
             "etm_scenario_id": 2203666
         }
     },
@@ -2328,7 +2328,7 @@
             "scenario": 1,
             "module": "costbenefit",
             "name": "",
-            "api_url": "https://beta-engine.energytransitionmodel.com/api/v3/scenarios/",
+            "api_url": "https://engine.energytransitionmodel.com/api/v3/scenarios/",
             "etm_scenario_id": 987511684
         }
     },
