--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
     "@headlessui/react": "^1.7.2",
     "@heroicons/react": "^2.0.11",
     "@microsoft/applicationinsights-react-js": "^17.0.0",
