--- a/docker/config/python.example.env
+++ b/docker/config/python.example.env
@@ -14,3 +14,4 @@ DOMAIN_HOST="https://pizzaoven.holontool.nl"
 # Set to enable remote debugging with PyCharm or IntelliJ
 PYCHARM_IP=172.17.0.1
 PYCHARM_PORT=9222
+SENTRY_DSN=https://764e9f2b886741bcbcfd2acd74a7f7b0@o4505045746384896.ingest.sentry.io/4505045759361024
