--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -6,6 +6,6 @@
       "plugin:@typescript-eslint/recommended"
     ],
     "rules": {
-      "@typescript-eslint/no-unused-vars": "error"
+      "@typescript-eslint/no-unused-vars": ["error", { "args": "none" }]
     }
   }
