--- a/.github/workflows/build-push-deploy.yml
+++ b/.github/workflows/build-push-deploy.yml
@@ -6,7 +6,6 @@ on:
       - main
       - production
       - acceptance
-      - swarm
   workflow_dispatch:
 
 permissions:
@@ -105,6 +104,7 @@ jobs:
                   EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
                   # NextJS
                   NEXT_HOSTNAME: ${{ fromJson(needs.variables.outputs.result).NEXT_HOSTNAME }}
+                  NEXT_CADDY_HOSTS: ${{ fromJson(needs.variables.outputs.result).NEXT_CADDY_HOSTS }}
                   NEXT_PUBLIC_TINY_URL_API_KEY: ${{ secrets.TINY_URL_API_KEY }}
               with:
                   remote_host: ssh://root@server.zenmo.com
