--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "export": "next export",
     "storybook": "start-storybook -p 3001 -s ./public",
     "build-storybook": "npx build-storybook -s public",
-    "fixcode": "npx prettier \"**/*(*.css|*.ts|*.json|*.md|*.scss)\" --write",
+    "fixcode": "npx prettier \"**/*(*.css|*.ts|*.json|*.md|*.scss|*.tsx)\" --write",
     "new": "node cli/bin.js new",
     "new:container": "node cli/bin.js new --container",
     "test": "jest --watch",
@@ -95,7 +95,7 @@
     "jest-junit": "^16.0.0",
     "jest-next-dynamic": "^1.0.1",
     "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
+    "prettier": "^3.5.2",
     "pretty-quick": "^3.1.3",
     "storybook-addon-next": "^1.8.0",
     "style-loader": "^3.3.3",
